8346737: GenShen: Generational memory pools should not report zero for maximum capacity

Reviewed-by: kdnilsen, ysr
Backport-of: 249f141211c94afcce70d9d536d84e108e07b4e5